Updated all project

--- a/NewsPortal.Data/App.config
+++ b/NewsPortal.Data/App.config
@@ -11,6 +11,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NewsContext" connectionString="Data Source=.; Initial Catalog=NewsPortal; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="NewsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NewsContext-20170206174339; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NewsContext-20170206174339.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
