--- a/NewsPortal.Data/NewsPortal.Data.csproj
+++ b/NewsPortal.Data/NewsPortal.Data.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AD891586-D47D-45BD-9CCF-E79E4ACCC108}</ProjectGuid>
+    <ProjectGuid>{FABF38D1-D158-495A-87CA-D768FBEA76D0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NewsPortal.Data</RootNamespace>
@@ -49,11 +49,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
+    <Compile Include="DataContext\NewsContext.cs" />
+    <Compile Include="Migrations\201702061454185_InitialMigration.cs" />
+    <Compile Include="Migrations\201702061454185_InitialMigration.Designer.cs">
+      <DependentUpon>201702061454185_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Model\Role.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201702061454185_InitialMigration.resx">
+      <DependentUpon>201702061454185_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
