--- a/NewsPortal.Admin/Web.config
+++ b/NewsPortal.Admin/Web.config
@@ -33,7 +33,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -57,7 +57,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NewsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NewsContext-20170206174339; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NewsContext-20170206174339.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="NewsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NewsContext-20170206174339; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NewsContext-20170206174339.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
