--- a/NewsPortal.Admin/NewsPortal.Admin.csproj
+++ b/NewsPortal.Admin/NewsPortal.Admin.csproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Classes\BootStrapper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
