--- a/NewsPortal.Admin/NewsPortal.Admin.csproj
+++ b/NewsPortal.Admin/NewsPortal.Admin.csproj
@@ -162,6 +162,12 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NewsPortal.Core\NewsPortal.Core.csproj">
+      <Project>{d0856265-1c9d-4219-87e5-27686f84f7fb}</Project>
+      <Name>NewsPortal.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
