--- a/NewsPortal.Data/NewsPortal.Data.csproj
+++ b/NewsPortal.Data/NewsPortal.Data.csproj
@@ -49,7 +49,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="Migrations\201702061454185_InitialMigration.cs" />
     <Compile Include="Migrations\201702061454185_InitialMigration.Designer.cs">
       <DependentUpon>201702061454185_InitialMigration.cs</DependentUpon>
@@ -80,9 +79,7 @@
       <DependentUpon>201702062012009_InitialMigration1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repository\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
