--- a/NewsPortal.Admin/NewsPortal.Admin.csproj
+++ b/NewsPortal.Admin/NewsPortal.Admin.csproj
@@ -226,6 +226,9 @@
     <Content Include="fonts\typicons.ttf" />
     <Content Include="fonts\typicons.woff" />
     <Content Include="fonts\typiconsd41d.eot" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_PartialHeader.cshtml" />
+    <Content Include="Views\Shared\_PartialSidebar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -236,7 +239,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NewsPortal.Core\NewsPortal.Core.csproj">
