--- a/NewsPortal.Admin/NewsPortal.Admin.csproj
+++ b/NewsPortal.Admin/NewsPortal.Admin.csproj
@@ -196,6 +196,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Classes\BootStrapper.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="CustomFilter\LoginFilter.cs" />
     <Compile Include="Global.asax.cs">
@@ -229,6 +230,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_PartialHeader.cshtml" />
     <Content Include="Views\Shared\_PartialSidebar.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -244,6 +246,10 @@
     <ProjectReference Include="..\NewsPortal.Core\NewsPortal.Core.csproj">
       <Project>{d0856265-1c9d-4219-87e5-27686f84f7fb}</Project>
       <Name>NewsPortal.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NewsPortal.Data\NewsPortal.Data.csproj">
+      <Project>{FABF38D1-D158-495A-87CA-D768FBEA76D0}</Project>
+      <Name>NewsPortal.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
