--- a/NewsPortal.Core/NewsPortal.Core.csproj
+++ b/NewsPortal.Core/NewsPortal.Core.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\ICategoryRepository.cs" />
     <Compile Include="Infrastructure\IImageRepository.cs" />
     <Compile Include="Infrastructure\INewsRepository.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="Infrastructure\IRoleRepository.cs" />
     <Compile Include="Infrastructure\IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\CategoryRepository.cs" />
     <Compile Include="Repository\ImageRepository.cs" />
     <Compile Include="Repository\NewsRepository.cs" />
     <Compile Include="Repository\RoleRepository.cs" />
