--- a/NewsPortal.Admin/NewsPortal.Admin.csproj
+++ b/NewsPortal.Admin/NewsPortal.Admin.csproj
@@ -167,6 +167,8 @@
     <Content Include="img\loaders\loader9.gif" />
     <Content Include="img\logo.png" />
     <Content Include="img\tickc81e.html" />
+    <Content Include="Scripts\bootbox.min.js" />
+    <Content Include="Scripts\Global.js" />
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\page-bootstrap.js" />
     <Content Include="Scripts\page-calendar.js" />
@@ -196,6 +198,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Classes\BootStrapper.cs" />
+    <Compile Include="Classes\ResultJson.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
